# forgeducation

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  HANDOVER.md  README.md  TEST.md  TODO.md  pyproject.toml
.claude/agents/: ci-triage.md  doc-drift-checker.md  git-commit-pr.md  session-catchup.md
.github/workflows/: ci.yml
config/: pipeline.review-loop.yaml  pipeline.skeleton.yaml
docs/architecture/: 01-input-specification.md  07-agentic-pipeline-status.md  08-stage-specific-models.md  09-langfuse-tracing.md  10-output-quality-remediation.md  11-topic-fidelity-r1.md  12-notebook-orientation-cell.md  13-curriculum-planner.md  14-code-explanation-and-readiness.md  15-structured-grader-output.md  16-smart-front-door.md
eduforge/: agent.py  artifacts.py  cli.py  gate.py  ledger.py  llm.py  orchestrator.py  progress.py  report.py
forged/: agent.py  cli.py  config.py  context.py  deliverables.py  executor.py  ledger.py  llm.py  models.py  orchestrator.py  packaging.py  prompts.py  provisioning.py  usage.py
forged/curriculum/: __init__.py  adjuster.py  assembler.py  fidelity.py  gate.py  model.py  operations.py  orchestrator.py  planner.py  reactive.py  readiness.py
future_work/: project-mode.md
personas/: code_author.md  curriculum_planner.md  plan_adjuster.md  planner.md  readiness_assessor.md  reviewer.md  reviser.md  student.md
templates/: README.md  learner_profile.template.yaml
test-e2e-agentic/: SUMMARY.md  lesson.ipynb  lesson_plan_v0.md  revision_brief_v0.md  student_grade_report_v0.json
test-e2e-agentic-fixed/: SUMMARY.md  brief.md  execution_report_v0.json  lesson.ipynb  lesson_notebook_v0.ipynb  lesson_plan_v0.md  student_grade_report_v0.json
tests/: test_cli_agentic.py  test_cli_course.py  test_cli_learn.py  test_context.py  test_curriculum_adjuster.py  test_curriculum_assembler.py  test_curriculum_fidelity.py  test_curriculum_gate.py  test_curriculum_model.py  test_curriculum_operations.py  test_curriculum_orchestrator.py  test_curriculum_planner.py  test_curriculum_reactive.py  test_curriculum_readiness.py  test_packaging.py  test_pipeline.py  test_provisioning.py  test_usage.py
(+33 files in other folders)
