[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forged"
version = "0.1.0"
description = "A multi-agent CLI that builds and self-checks IT learning notebooks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "forged contributors" }]
keywords = ["education", "notebooks", "agents", "llm", "jupyter"]

dependencies = [
    "openai>=1.45.0",      # OpenAI + Ollama client (needs max_completion_tokens support)
    "langfuse>=3.0.0",     # trace every LLM-backed agent prompt
    "pydantic>=2.0.0",     # config validation
    "pyyaml>=6.0",         # pipeline config files
    "nbformat>=5.10.0",    # assemble .ipynb
    "nbclient>=0.10.0",    # execute notebooks (the anti-bug layer)
    "ipykernel>=6.29.0",   # kernel for execution
    "langgraph>=1.0.0",    # LangGraph for agentic pipeline orchestration
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",          # lint + import sorting
    "mypy>=1.11.0",         # static type checking
    "types-PyYAML>=6.0",    # stubs for the yaml import
]

[project.scripts]
forged = "forged.cli:main"

[tool.setuptools]
packages = ["forged", "forged.pipeline", "forged.pipeline.agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast, isolated unit tests (no I/O, no LLM)",
    "integration: tests that integrate multiple modules",
]

[tool.ruff]
line-length = 100
target-version = "py310"   # matches requires-python
# Generated run output (LLM-authored notebooks, executed copies) is not source
# code — keep it out of linting even when ruff is run bare at the repo root.
extend-exclude = ["runs", "e2e-runs", "test-e2e*"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, UP: pyupgrade, B: bugbear,
# C4: comprehensions, SIM: simplify. A pragmatic set, not the kitchen sink.
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
files = ["forged"]
warn_unused_ignores = true
